--- a/package.json
+++ b/package.json
@@ -5,18 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lijing-code/MVC-Tech-Blog.git"
+    "start": "node server.js",
+    "seed": "node seeds/seed.js"
   },
   "author": "Jing Li",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lijing-code/MVC-Tech-Blog/issues"
-  },
-  "homepage": "https://github.com/lijing-code/MVC-Tech-Blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
